# qv_ess

./: .gitignore  README.md  add_cloumn.py  export_code.py  main.py  pyproject.toml
app/: main.py  test_run.py
app/api/: deps.py
app/api/v1/: auth.py  payment.py  settings.py  simulation.py
app/core/: config.py  security.py
app/db/: database.py  models.py
app/engine/: finance.py  physics.py  schemas.py
app/models/: user_settings.py
app/modules/iam/: models.py  router.py  schemas.py  security.py
app/schemas/: user_settings.py
app/services/: pvgis.py
app/utils/: email_sender.py
tests/: test_physics.py
